# shotext

./: .tbdflow.yml  Cargo.toml  README.md
.github/workflows/: rust-ci.yml
docs/: Project Description - shotext.md
src/: cli.rs  colours.rs  config.rs  db.rs  error.rs  experimental_ui.rs  indexer.rs  ingest.rs  lib.rs  main.rs  ocr.rs  search.rs  viewer.rs  watch.rs
