[package]
name = "shotext"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI & Config
clap = { version = "4.0", features = ["derive"] }
confy = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# OCR & Image
tesseract = "0.12" 
image = "0.24" # Useful for pre-processing Mac Retina screenshots
blake3 = "1.3" # Fast hashing for sled keys

# Storage (The Medi Stack)
sled = "0.34"
tantivy = "0.19"
notify = "6.0"
walkdir = "2.3"

# UI
skim = "0.10"
anyhow = "1.0"
colored = "2.0"
