[package]
name = "shotext"
version = "0.1.0"
authors = ["Claes Adamsson <claes.adamsson@gmail.com>"]
homepage = "https://cladam.github.io/"
repository = "https://github.com/cladam/shotext"
readme = "README.md"
license = "MIT"
description = "High-performance OCR & Full-Text Search Indexer for macOS Screenshots "
keywords = ["cli", "OCR", "screenshots"]
categories = ["command-line-utilities", "development-tools"]
edition = "2021"

[dependencies]
# CLI & Config
clap = { version = "4.5.60", features = ["derive"] }
clap_complete = "4.5.60"
toml = "0.9.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# OCR & Image
tesseract = "0.15.2"
image = "0.25.10" # Useful for pre-processing Mac Retina screenshots
blake3 = "1.8.3" # Fast hashing for sled keys

sled = "0.34.7"
tantivy = "0.25.0"
notify = "9.0.0-rc.2"
walkdir = "2.5.0"
dirs = "6.0.0"
chrono = "0.4.44"
skim = "4.0.0"
anyhow = "1.0.102"
thiserror = "2.0.18"
colored = "3.1.1"
lazy_static = "1.5.0"
tempfile = "3.26.0"
self_update = "0.43.1"
regex = "1.11.2"

[lib]
name = "shotext"
